force-app/main/default/objects/Request_For_Proposal__c/Request_For_Proposal__c.object-meta.xml
<CustomObject>
    <description>Request for Proposal intake and review process before supplier quotations.</description>
    <label>Request for Proposal</label>
    <nameField>
        <displayFormat>RFP-{00000}</displayFormat>
        <label>RFP Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requests for Proposal</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>