force-app/main/default/objects/Request_For_Proposal__c/fields/Business_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Business_Requirements__c</fullName>
    <label>Business Requirements</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>