force-app/main/default/objects/Request_For_Proposal__c/fields/Distribution_Notes__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Notes__c</fullName>
    <label>Distribution Notes</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>