force-app/main/default/objects/Request_For_Proposal__c/fields/Distribution_Status__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Status__c</fullName>
    <label>Distribution Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Not Sent</fullName><default>true</default><label>Not Sent</label></value>
            <value><fullName>Partially Sent</fullName><default>false</default><label>Partially Sent</label></value>
            <value><fullName>Sent</fullName><default>false</default><label>Sent</label></value>
            <value><fullName>Failed</fullName><default>false</default><label>Failed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>