force-app/main/default/objects/Request_For_Proposal__c/fields/Last_Distribution_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Distribution_Date__c</fullName>
    <label>Last Distribution Date</label>
    <type>DateTime</type>
</CustomField>