force-app/main/default/objects/Request_For_Proposal__c/fields/Needed_By_Date__c.field-meta.xml
<CustomField>
    <fullName>Needed_By_Date__c</fullName>
    <label>Needed By Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>