force-app/main/default/objects/Request_For_Proposal__c/fields/Preferred_Suppliers__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Suppliers__c</fullName>
    <label>Preferred Suppliers</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>