force-app/main/default/objects/Request_For_Proposal__c/validationRules/Needed_Date_Not_Past.validationRule-meta.xml
<ValidationRule>
    <active>true</active>
    <description>Needed by date must not be in the past.</description>
    <errorConditionFormula>Needed_By_Date__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>Needed_By_Date__c</errorDisplayField>
    <errorMessage>Needed by date cannot be in the past.</errorMessage>
</ValidationRule>