force-app/main/default/objects/Request_For_Proposal__c/listViews/All_RFPs.listView-meta.xml
<ListView>
    <filterScope>Everything</filterScope>
    <label>All RFPs</label>
</ListView>