force-app/main/default/objects/Request_For_Proposal__c/listViews/Ready_for_Distribution.listView-meta.xml
<ListView>
    <columns>Name</columns>
    <columns>Title__c</columns>
    <columns>Status__c</columns>
    <columns>Distribution_Status__c</columns>
    <columns>Needed_By_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>Ready for Distribution</label>
</ListView>